--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gh-viewer",
+  "name": "@kennyfrc/gh-viewer",
   "version": "0.1.0",
   "description": "CLI to explore GitHub repositories via the REST API without cloning.",
   "license": "MIT",
@@ -25,6 +25,9 @@
     "README.md",
     "LICENSE"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "lint": "tsc --noEmit",
