--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "lint": "tsc --noEmit",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "test": "npm run build && node --test tests/**/*.test.js"
   },
   "dependencies": {
     "minimatch": "^9.0.4"
